roles/microk8s-cluster/files/k8s-dashboard-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  tls:
    - hosts:
        - k8s-dashboard.owntube.tv
      secretName: kubernetes-dashboard-ingress-cert
  rules:
    - host: k8s-dashboard.owntube.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
...
